--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
 
 <body>
     <div id="preloader"></div>
+    <div class="portfolioback"><a href="/mainindex.html"><img src="/elso_minta_oldal/Images/arrowup.png"></a></div>
 
     <!-- --------------------------------Fejléc/navbar------------------------ -->
     <section class="header">
         <nav class="navi" id="navbar">
-            <a href="index.html"><img src="../elsomintaoldal/Images/mainlogoblue2.png" alt="logo" class="logo" id="logo"
+            <a href="index.html"><img src="/elso_minta_oldal/Images/" alt="logo" class="logo" id="logo"
                     title="Vissza a Főoldalra"></a>
             <div class="cegnev">
                 <h1>Horváth László E.v. Lakatos</h1>
@@ -26,7 +27,7 @@
                 <li><a href="galeria.html">Galéria</a></li>
                 <li><a href="elerhetoseg.html">Elérhetőség</a></li>
                 <li><a href="rolunk.html">Rólunk</a></li>
-                <img src="./Images/moon.png" id="icon" class="icon" title="Weboldalszín mód">
+                <img src="elso_minta_oldal/Images/moon.png" id="icon" class="icon" title="Weboldalszín mód">
             </ul>
             <button class="hamburger">
                 <div class="bar"></div>
@@ -77,7 +78,7 @@
         <div class="gallery-row">
             <h3 class="mobil-kiiras"><a href="galeria.html">Kapuk</a></h3>
             <div class="gallery-col">
-                <a href="galeria.html"><img src="/Images/Kapuk.png">
+                <a href="galeria.html"><img src="/elso_minta_oldal/Images/Kapuk.png">
                     <div class="layer">
 
                         <h3>Kapuk <i class="fas fa-caret-right"></i></h3>
@@ -87,7 +88,7 @@
             </div>
             <h3 class="mobil-kiiras"><a href="galeria.html">Korlátok</a></h3>
             <div class="gallery-col">
-                <a href="galeria.html"><img src="/Images/Korlat.png">
+                <a href="galeria.html"><img src="/elso_minta_oldal/Images/Korlat.png">
                     <div class="layer">
                         <h3>Korlátok <i class="fas fa-caret-right"></i></h3>
                     </div>
@@ -95,7 +96,7 @@
             </div>
             <h3 class="mobil-kiiras"><a href="galeria.html">Lépcsők</a></h3>
             <div class="gallery-col">
-                <a href="galeria.html"><img src="/Images/Lepcsok.png">
+                <a href="galeria.html"><img src="/elso_minta_oldal/Images/Lepcsok.png">
                     <div class="layer">
                         <h3>Lépcsők <i class="fas fa-caret-right"></i></h3>
                     </div>
@@ -105,7 +106,7 @@
         <div class="gallery-row">
             <h3 class="mobil-kiiras"><a href="galeria.html">Úszókapuk</a></h3>
             <div class="gallery-col">
-                <a href="galeria.html"><img src="/Images/Uszokapuk.png">
+                <a href="galeria.html"><img src="/elso_minta_oldal/Images/Uszokapuk.png">
                     <div class="layer">
                         <h3>Úszókapuk <i class="fas fa-caret-right"></i></h3>
                     </div>
@@ -113,7 +114,7 @@
             </div>
             <h3 class="mobil-kiiras"><a href="galeria.html">Vasszerkezetek</a></h3>
             <div class="gallery-col">
-                <a href="galeria.html"><img src="/Images/Vasszerkezetek.png">
+                <a href="galeria.html"><img src="/elso_minta_oldal/Images/Vasszerkezetek.png">
                     <div class="layer">
                         <h3>Vasszerkezetek <i class="fas fa-caret-right"></i></h3>
                     </div>
@@ -121,7 +122,7 @@
             </div>
             <h3 class="mobil-kiiras"><a href="galeria.html">Tetőszerkezetek</a></h3>
             <div class="gallery-col">
-                <a href="galeria.html"><img src="/Images/Tetoszerkezetek.png">
+                <a href="galeria.html"><img src="/elso_minta_oldal/Images/Tetoszerkezetek.png">
                     <div class="layer">
                         <h3>Tetőszerkezetek <i class="fas fa-caret-right"></i></h3><br>
                     </div>
@@ -163,7 +164,7 @@
         <hr>
         <div class="footerrow">
             <div class="footercol">
-                <a href="index.html"><img src="/Images/mainlogoblue3.png" alt="logo" id="footerlogo" class="footerlogo"
+                <a href="index.html"><img src="/elso_minta_oldal/Images/mainlogoblue3.png" alt="logo" id="footerlogo" class="footerlogo"
                         title="Vissza a Főoldalra"></a>
             </div>
             <div class="footercol">
@@ -183,8 +184,8 @@
                     <li>Vasárnap: Zárva</li>
                     <hr>
                     <li><a href="index.html">Kezdőlap</a></li>
-                    <li><a href="">Adatvédelmi nyilatkozat</a></li>
-                    <li><a href="">Cookie tájékoztató</a></li>
+                    <li><a href="#">Adatvédelmi nyilatkozat</a></li>
+                    <li><a href="#">Cookie tájékoztató</a></li>
                     <li><a href="elerhetoseg.html">Kapcsolat</a></li>
                 </ul>
             </div>
