--- a/rolunk.html
+++ b/rolunk.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rólunk</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../elsomintaoldal/style.css">
     <script src="https://kit.fontawesome.com/e4b878c562.js" crossorigin="anonymous"></script>
 </head>
 
@@ -15,7 +15,7 @@
     <!-- --------------------------------Fejléc/navbar------------------------ -->
     <section class="header">
         <nav class="navi" id="navbar">
-            <a href="index.html"><img src="/Images/mainlogoblue2.png" alt="logo" class="logo" id="logo"
+            <a href="index.html"><img src="../elsomintaoldal/Images/mainlogoblue2.png" alt="logo" class="logo" id="logo"
                     title="Vissza a Főoldalra"></a>
             <div class="cegnev">
                 <h1>Horváth László E.v. Lakatos</h1>
@@ -25,7 +25,7 @@
                 <li><a href="galeria.html">Galéria</a></li>
                 <li><a href="elerhetoseg.html">Elérhetőség</a></li>
                 <li><a href="rolunk.html">Rólunk</a></li>
-                <img src="/Images/moon.png" id="icon" class="icon" title="Weboldalszín mód">
+                <img src="../elsomintaoldal/Images/moon.png" id="icon" class="icon" title="Weboldalszín mód">
             </ul>
             <button class="hamburger">
                 <div class="bar"></div>
@@ -64,7 +64,7 @@
                 tetőszerkezet.
             </p>
             <div class="rolunkkep">
-                <img src="/Images/rolunk.jpg">
+                <img src="../elsomintaoldal/Images/rolunk.jpg">
             </div>
         </div>
         <div class="dolgozunk">
@@ -113,7 +113,7 @@
         <hr>
         <div class="footerrow">
             <div class="footercol">
-                <a href="index.html"><img src="/Images/mainlogoblue3.png" alt="logo" id="footerlogo" class="footerlogo"
+                <a href="index.html"><img src="../elsomintaoldal/Images/mainlogoblue3.png" alt="logo" id="footerlogo" class="footerlogo"
                         title="Vissza a Főoldalra"></a>
             </div>
             <div class="footercol">
@@ -143,9 +143,9 @@
         <p class="copyright">Készítette: Horváth Krisztián &copy 2022 - Minden Jog Fenntartva</p>
     </footer>
 
-    <script src="/js/loader.js"></script>
-    <script src="/js/darkmode.js"></script>
-    <script src="/js/sticky.js"></script>
-    <script src="/js/navbar.js"></script>
+    <script src="../elsomintaoldal/js/loader.js"></script>
+    <script src="../elsomintaoldal/js/darkmode.js"></script>
+    <script src="../elsomintaoldal/js/sticky.js"></script>
+    <script src="../elsomintaoldal/js/navbar.js"></script>
 
 </body>
