--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div id="preloader"></div>
-    <div class="portfolioback"><a href="../jhindenem.github.io/portfolio/index.html"><img src="../elsomintaoldal/Images/arrowup.png"></a></div>
+    <div class="portfolioback"><a href="../jhindenem.github.io/portfolio"><img src="../elsomintaoldal/Images/arrowup.png"></a></div>
 
     <!-- --------------------------------Fejléc/navbar------------------------ -->
     <section class="header">
