--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div id="preloader"></div>
-    <div class="portfolioback"><a href="../jhindenem.github.io/portfolio"><img src="../elsomintaoldal/Images/arrowup.png"></a></div>
+    <div class="portfolioback"><a href="https://jhindenem.github.io/portfolio/"><img src="../elsomintaoldal/Images/arrowup.png"></a></div>
 
     <!-- --------------------------------Fejléc/navbar------------------------ -->
     <section class="header">
@@ -164,7 +164,7 @@
         <hr>
         <div class="footerrow">
             <div class="footercol">
-                <a href="index.html"><img src="../elsomintaoldal/Images/mainlogoblue3.png" alt="logo" id="footerlogo" class="footerlogo"
+                <a href="index.html"><img src="../elsomintaoldal/Images/mainlogoblue2.png" alt="logo" id="footerlogo" class="footerlogo"
                         title="Vissza a Főoldalra"></a>
             </div>
             <div class="footercol">
